--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: flutter_hk_fork
+name: flutter_hk
 description: Flutter plugin to play hikvision camera with 8000 protocol. It used hikvision native library, *.so for java and *.a for ios.
 version: 1.0.2
-#author: TrevorDu <duchunwang@gmail.com>
-homepage: https://github.com/arkk4/flutter_hk
+author: TrevorDu <duchunwang@gmail.com>
+homepage: https://github.com/duchunwang/flutter_hk
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
